--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,21 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>Echo AI</title>
+  <meta name="title" content="Innovate, Automate, Accelerate " />
+  <meta name="description" content="Next Gen AI Automation to Scale Your Business." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://echo-alpha-five.vercel.app/" />
+  <meta property="og:title" content="Innovate, Automate, Accelerate " />
+  <meta property="og:description" content="Next Gen AI Automation to Scale Your Business." />
+  <meta property="og:image" content="/meta-tag-img.png" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://echo-alpha-five.vercel.app/" />
+  <meta property="twitter:title" content="Innovate, Automate, Accelerate " />
+  <meta property="twitter:description" content="Next Gen AI Automation to Scale Your Business." />
+  <meta property="twitter:image" content="/meta-tag-img.png" />
 </head>
 
 <body>
